--- a/lab1/Creator/CMakeLists.txt
+++ b/lab1/Creator/CMakeLists.txt
@@ -1,5 +1,1 @@
-﻿add_executable (Creator "creator.cpp")
-
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET Main PROPERTY CXX_STANDARD 20)
-endif()
+﻿add_executable(Creator creator.cpp)
